--- a/views/admin/app/home-dashboard.ejs
+++ b/views/admin/app/home-dashboard.ejs
@@ -120,6 +120,7 @@
         animation-timing-function: ease-in-out;
         animation-iteration-count: infinite;
         animation-direction: alternate;
+        z-index: 0;
       }
 
       .bg-bubble--peach {
@@ -135,28 +136,28 @@
       }
 
       .bg-bubble--tl-soft {
-        width: 140px;
-        height: 140px;
-        top: 40px;
-        left: -60px;
+        width: 130px;
+        height: 130px;
+        top: 28px;
+        left: -50px;
         animation-duration: 26s;
         animation-delay: -8s;
       }
 
       .bg-bubble--tr-soft {
-        width: 110px;
-        height: 110px;
-        top: 140px;
-        right: -40px;
+        width: 90px;
+        height: 90px;
+        top: 110px;
+        right: -30px;
         animation-duration: 24s;
         animation-delay: -6s;
       }
 
       .bg-bubble--bl-soft {
-        width: 120px;
-        height: 120px;
-        bottom: -50px;
-        left: 10%;
+        width: 110px;
+        height: 110px;
+        bottom: -40px;
+        left: 6%;
         animation-duration: 28s;
         animation-delay: -10s;
       }
@@ -165,16 +166,16 @@
         width: 150px;
         height: 150px;
         bottom: -70px;
-        right: 18%;
+        right: 20%;
         animation-duration: 30s;
         animation-delay: -4s;
       }
 
       .bg-bubble--mid-soft {
-        width: 80px;
-        height: 80px;
-        top: 65%;
-        left: 55%;
+        width: 90px;
+        height: 90px;
+        top: 60%;
+        left: 58%;
         animation-duration: 22s;
         animation-delay: -12s;
       }
@@ -197,6 +198,8 @@
         padding: 40px 72px 56px;
         display: flex;
         justify-content: center;
+        position: relative;
+        z-index: 1;
       }
 
       .admin-main {
