--- a/views/admin/auth/request-access.ejs
+++ b/views/admin/auth/request-access.ejs
@@ -177,6 +177,18 @@
         color: #166534;
       }
 
+      .request-required-note {
+        font-size: 12px;
+        color: #6b5a56;
+        margin-bottom: 10px;
+      }
+
+      .request-label-required::after {
+        content: ' *';
+        color: #b91c1c;
+        font-weight: 600;
+      }
+
       .bg-bubble {
         position: absolute;
         border-radius: 999px;
@@ -372,9 +384,11 @@
         <div class="request-message request-message--success"><%= success %></div>
         <% } %>
 
+        <div class="request-required-note">Fields marked with <span style="color:#b91c1c;">*</span> are required.</div>
+
         <form method="POST" action="/admin/create">
           <div class="request-field">
-            <label class="request-label" for="email">Work email</label>
+            <label class="request-label request-label-required" for="email">Work email</label>
             <input
               type="email"
               id="email"
@@ -386,7 +400,7 @@
           </div>
 
           <div class="request-field">
-            <label class="request-label" for="first_name">First name</label>
+            <label class="request-label request-label-required" for="first_name">First name</label>
             <input
               type="text"
               id="first_name"
@@ -398,7 +412,7 @@
           </div>
 
           <div class="request-field">
-            <label class="request-label" for="last_name">Last name</label>
+            <label class="request-label request-label-required" for="last_name">Last name</label>
             <input
               type="text"
               id="last_name"
@@ -432,7 +446,7 @@
           </div>
 
           <div class="request-field">
-            <label class="request-label" for="password">Create a password</label>
+            <label class="request-label request-label-required" for="password">Create a password</label>
             <input
               type="password"
               id="password"
