Make important fixes

--- a/views/admin/app/events.ejs
+++ b/views/admin/app/events.ejs
@@ -336,8 +336,8 @@
             <tbody>
               <% participants.forEach(function (p) { %>
               <tr>
-                <td style="padding:4px 6px;"><%= p.participantfirstname || '' %> <%= p.participantlastname || '' %></td>
-                <td style="padding:4px 6px;"><%= p.participantemail || '' %></td>
+                <td style="padding:4px 6px;"><%= p.personfirstname || '' %> <%= p.personlastname || '' %></td>
+                <td style="padding:4px 6px;"><%= p.personemail || '' %></td>
                 <td style="padding:4px 6px;"><%= p.registrationstatus || '' %></td>
                 <td style="padding:4px 6px;"><%= p.registrationattendedflag ? 'Yes' : 'No' %></td>
               </tr>
